# flake8-comprehensions

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  flake8_comprehensions.py  pyproject.toml  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  test_flake8_comprehensions.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: flake8_comprehensions.py
src/flake8_comprehensions/: __init__.py
tests/: __init__.py  test_flake8_comprehensions.py  test_it.py  utils.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
