[metadata]
name = flake8-comprehensions
version = 2.3.0
description = A flake8 plugin to help you write better list/set/dict comprehensions.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/flake8-comprehensions
project_urls =
    Changelog = https://github.com/adamchainz/flake8-comprehensions/blob/master/HISTORY.rst
license = ISCL
keywords = flake8, comprehensions, list comprehension, set comprehension, dict comprehension
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = flake8_comprehensions
include_package_data = True
install_requires =
    cached-property>=1.0.0,<2.0.0
    flake8>=3.0,!=3.2.0,<4
    importlib-metadata ; python_version < "3.8"
python_requires = >=3.5
zip_safe = False

[options.entry_points]
flake8.extension =
    C4 = flake8_comprehensions:ComprehensionChecker

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
