[metadata]
name = flake8_comprehensions
version = 3.13.0
description = A flake8 plugin to help you write better list/set/dict comprehensions.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/adamchainz/flake8-comprehensions
author = Adam Johnson
author_email = me@adamj.eu
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Typing :: Typed
keywords = flake8, comprehensions, list comprehension, set comprehension, dict comprehension
project_urls =
    Changelog = https://github.com/adamchainz/flake8-comprehensions/blob/main/CHANGELOG.rst
    Mastodon = https://fosstodon.org/@adamchainz
    Twitter = https://twitter.com/adamchainz

[options]
packages = find:
install_requires =
    flake8!=3.2.0,>=3.0
    importlib-metadata;python_version < "3.8"
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
flake8.extension =
    C4 = flake8_comprehensions:ComprehensionChecker

[flake8]
max-line-length = 88
extend-ignore = E203
